--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" sizes="16x16" href="%PUBLIC_URL%/images/favicon.jpeg" />
+    <link rel="icon" href="%PUBLIC_URL%/images/loco/favicon.jpeg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +14,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
     <title>SOONGO</title>
   </head>
   <body>
